--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -23,7 +23,10 @@
   <div class="scene" id="welcome">
     <article class="content">
 
- 
+    <div class = "scene" id = "welcome-messages">
+      <h2>{{ englishMessage }}</h2>
+      <h2>{{ frenchMessage }}</h2>
+    </div>
 
       <div class="row">
         <div class=""col-12>
@@ -58,7 +61,7 @@
               </div>
               </form>
 
-        
+
         </div>
       </div>
 
