--- a/src/main/UI/src/app/app.component.html
+++ b/src/main/UI/src/app/app.component.html
@@ -6,6 +6,10 @@
       <h1>Landon Hotel</h1>
       <h2>London, Ontario</h2>
       <p><a href="/#welcome"><img src="assets/images/arrow.png" alt="down arrow"></a></p>
+      <div class = "scene" id = "welcome-messages">
+        <h1>{{ englishMessage }}</h1>
+        <h1>{{ frenchMessage }}</h1>
+      </div>
     </div>
   </article>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -22,11 +26,11 @@
 <main id="wrapper">
   <div class="scene" id="welcome">
     <article class="content">
+      <div class = "scene" id = "timezones">
+        <h2>Join us for an online live presentation held at the hotel on Oct 11, 2024 at: </h2>
+        <h2>{{ timeZoneData }}</h2>
+      </div>
 
-    <div class = "scene" id = "welcome-messages">
-      <h2>{{ englishMessage }}</h2>
-      <h2>{{ frenchMessage }}</h2>
-    </div>
 
       <div class="row">
         <div class=""col-12>
